[package]
name = "ovr"
version = "0.1.18"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["macros", "multipart"] }
either = { version = "1.8.1", features = ["serde"] }
http-negotiator = { git = "https://github.com/scotow/http-negotiator", rev = "d2232d2", features = ["axum"] }
ics = "0.5.8"
itertools = "0.10.5"
lopdf = "0.30.0"
pdf-extract = "0.7.2"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
time = { version = "0.3.21", features = ["formatting", "local-offset", "macros", "parsing"] }
tokio = { version = "1.28.2", features = ["sync", "rt-multi-thread", "macros"] }
uuid = { version = "1.3.3", features = ["v5"] }
