[package]
name = "from-api"
version = "0.3.0"
edition = "2021"

[dependencies]
itertools = "0.12.0"
reqwest = { version = "0.11.23", features = ["json", "multipart"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
time = { version = "0.3.31", features = ["formatting", "macros"] }
tokio = { version = "1.35.1", features = ["macros", "rt"] }
